--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   sqflite: ^2.3.2
   widgets_to_image: ^1.0.0
   flutter_esc_pos_network: ^1.0.3
+  url_launcher: ^6.3.2
   # imin_printer: ^0.6.10
 
 dev_dependencies:
