--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   widgets_to_image: ^1.0.0
   flutter_esc_pos_network: ^1.0.3
   url_launcher: ^6.3.2
+  package_info_plus: ^9.0.0
   # imin_printer: ^0.6.10
 
 dev_dependencies:
