--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   flutter_esc_pos_network: ^1.0.3
   url_launcher: ^6.3.2
   package_info_plus: ^9.0.0
+  share_plus: ^12.0.1
+  path_provider: ^2.1.5
   # imin_printer: ^0.6.10
 
 dev_dependencies:
