--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.9
   freezed: ^2.4.6
