--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   package_info_plus: ^9.0.0
   share_plus: ^12.0.1
   path_provider: ^2.1.5
+  flutter_local_notifications: ^19.5.0
+  audioplayers: ^6.5.1
   # imin_printer: ^0.6.10
 
 dev_dependencies:
@@ -91,6 +93,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/logo/
+    - assets/music/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
